--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "truongnguyen",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.1.4",
     "bcrypt": "^0.8.7",
+    "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "cheerio": "^0.22.0",
     "connect-flash": "^0.1.1",
@@ -19,6 +21,7 @@
     "ejs-mate": "^2.3.0",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "faker": "^3.1.0",
     "mongoose": "^4.6.8",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
