--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "faker": "^3.1.0",
+    "mongoosastic": "^4.2.1",
     "mongoose": "^4.6.8",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
