--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "mongoose": "^4.6.8",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "stripe": "^4.14.0"
   },
   "devDependencies": {}
 }
