--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoosastic": "^4.2.1",
     "mongoose": "^4.6.8",
     "morgan": "^1.7.0",
+    "nodemailer": "^2.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "stripe": "^4.14.0"
